# solo5-sel4-runtime

./: .gitmodules  CMakeLists.txt  README.md  default.xml  easy-settings.cmake  settings.cmake
docs/: USING.md
roottask/: CMakeLists.txt
roottask/src/: main.c
unikernels/: .gitignore
